attempt to fix uneven borders
The footers still have a wider background than the headers and content, this is an attempt to fix that.

--- a/styles.css
+++ b/styles.css
@@ -471,3 +471,9 @@ canvas {
         min-height: 0;
     }
 }
+
+#footer-sections {
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+}
